<resources>
    <string name="app_name">liuboss</string>
    <string name="loginString">登录</string>
    <string name="hello_word">helloword</string>
    <string name="frag_login_username_hint">手机号码</string>
    <string name="frag_login_password_hint">密码</string>
    <string name="register_new_user">注册</string>
    <string name="www">www</string>
    <string name="input_user_error">用户名输入少于3位</string>
    <string name="input_password_error">密码输入少于3位</string>
    <string name="frag_regis_username_hint">手机号码</string>
    <string name="frag_verifi_hint">验证码</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="frag_main_name">昵称</string>
    <string name="frag_regis_agree_info">注册账号表示您同意最终用户协议</string>
    <string name="register_step_one">下一步</string>
    <string name="frag_regis_one_haved_count">已有账号登录</string>
    <string name="frag_regis_error_phone">输入不是手机号码</string>
    <string name="class_serach_txt">搜你喜欢的</string>
    <string name="str_user_sign">这个家伙很懒，什么也没留下...</string>

</resources>
