<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/frgment_login_24dp"
    android:layout_marginRight="@dimen/frgment_login_24dp"
    android:layout_marginTop="@dimen/frgment_login_layout_margin"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_layout_step_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_user_name_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_regis_username_hint"
            android:inputType="phone"
            android:lineSpacingExtra="2dp"
            android:lines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/verifi_code_layout_step_one"
            android:layout_marginLeft="0dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/frgment_login_8dp"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_verifi_code_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/frag_verifi_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_get_code_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/frgment_login_8dp"
            android:layout_marginLeft="@dimen/frgment_login_8dp"
            android:layout_marginRight="@dimen/frgment_login_2dp"
            android:layout_weight="1"
            android:background="@drawable/button_login_register"
            android:enabled="false"
            android:text="@string/bt_get_code"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_register_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frgment_login_16dp"
        android:layout_marginRight="@dimen/frgment_login_2dp"
        android:background="@drawable/button_login_register"
        android:enabled="false"
        android:text="@string/register_step_one"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/fragment_font_16sp" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="@dimen/frgment_login_16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_regis_agree_info"
        android:textSize="@dimen/fragment_font_14sp"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frgment_login_16dp"
        android:textSize="@dimen/fragment_font_16sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/frag_regis_one_haved_count"/>



</LinearLayout>