<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/frgment_login_24dp"
    android:layout_marginRight="@dimen/frgment_login_24dp"
    android:layout_marginTop="@dimen/frgment_login_layout_margin"
    android:orientation="vertical">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_user_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/frag_login_username_hint"
                android:lineSpacingExtra="2dp"
                android:lines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/frgment_login_8dp"
            android:layout_centerVertical="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/frag_login_password_hint"
                android:lines="1"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/frgment_login_16dp"
            android:background="@drawable/eye_off" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@drawable/button_login_register"
        android:layout_marginTop="@dimen/frgment_login_16dp"
        android:text="@string/loginString"
        android:enabled="false"
        android:textColor="@color/colorPrimaryDark" />



</LinearLayout>