<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/frgment_login_24dp"
    android:layout_marginRight="@dimen/frgment_login_24dp"
    android:layout_marginTop="@dimen/frgment_login_layout_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_main_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/frgment_login_8dp">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_main_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/frag_main_name"
            android:lines="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frgment_login_8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/frag_login_password_hint"
                android:inputType="textPassword"
                android:lines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/frgment_login_16dp"
            android:background="@drawable/eye_off" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/frgment_login_2dp"
        android:layout_marginTop="@dimen/frgment_login_16dp"
        android:background="@drawable/button_login_register"
        android:enabled="false"
        android:text="@string/register_new_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/fragment_font_16sp" />





</LinearLayout>